# pico-lib-sgp40

./: CMakeLists.txt  LICENSE  README.md
include/: SGP40.h
src/: SGP40.cpp
